--- a/about.html
+++ b/about.html
@@ -15,12 +15,12 @@
 
 <body>
   <section class="sub-header1">
-    <nav>
-      <a href="home.html"><img src="graphics/logo.png" alt="image"></a>
+     <nav>
+      <a href="index.html"><img src="/logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
-          <li><a href="home.html">HOME</a></li>
+          <li><a href="index.html">HOME</a></li>
           <li><a href="review.html">REVIEWS</a></li>
           <li><a href="forum.html">FORUM</a></li>
           <li><a href="news&updates.html">NEWS & UPDATES</a></li>
