--- a/login.html
+++ b/login.html
@@ -15,21 +15,21 @@
 
 <body>
     <section class="sub-header5">
-        <nav>
-        <a href="home.html"><img src="graphics/logo.png" alt="image"></a>
-        <div class="nav-links" id="navLinks">
-          <i class="bi-x-circle" onclick="hideMenu()"></i>
-          <ul>
-            <li><a href="home.html">HOME</a></li>
-            <li><a href="review.html">REVIEWS</a></li>
-            <li><a href="forum.html">FORUM</a></li>
-            <li><a href="news&updates.html">NEWS & UPDATES</a></li>
-            <li><a href="about.html">ABOUT US</a></li>
-            <li><a href="login.html">LOGIN\SIGN UP</a></li>
-          </ul>
-        </div>
-        <i class="bi-arrow-left-square" onclick="showMenu()"></i>
-        </nav>
+         <nav>
+      <a href="index.html"><img src="/logo.png" alt="logo"></a>
+      <div class="nav-links" id="navLinks">
+        <i class="bi-x-circle" onclick="hideMenu()"></i>
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="review.html">REVIEWS</a></li>
+          <li><a href="forum.html">FORUM</a></li>
+          <li><a href="news&updates.html">NEWS & UPDATES</a></li>
+          <li><a href="about.html">ABOUT US</a></li>
+          <li><a href="login.html">LOGIN\SIGN UP</a></li>
+        </ul>
+      </div>
+      <i class="bi-arrow-left-square" onclick="showMenu()"></i>
+    </nav>
 
     
     <div class="center">
