--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <p>While I do enjoy learning to code, this class has given me a glimpse of what front end engineering is like. While to the more experienced tech professionals this may be a simple web page designed by a student, I am extreme;y proud of it. I always want to learn to code but never had the chance. This was my opportunity and I believe I have learned some of the nuances and intricacies surrounding front end coding. If you enjoyed this little assignment of mine feel free to leave a comment and share your thoughts.</p>
         </div>
         <div class="about-col">
-            <img src="graphics/wolf.png" alt="image">
+            <img src="/wolf.png" alt="image">
         </div>
 
     </div>
