--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <body>
   <section class="sub-header1">
      <nav>
-      <a href="index.html"><img src="/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="graphics/logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
@@ -43,7 +43,7 @@
             <p>While I do enjoy learning to code, this class has given me a glimpse of what front end engineering is like. While to the more experienced tech professionals this may be a simple web page designed by a student, I am extreme;y proud of it. I always want to learn to code but never had the chance. This was my opportunity and I believe I have learned some of the nuances and intricacies surrounding front end coding. If you enjoyed this little assignment of mine feel free to leave a comment and share your thoughts.</p>
         </div>
         <div class="about-col">
-            <img src="/wolf.png" alt="image">
+            <img src="graphics/wolf.png" alt="image">
         </div>
 
     </div>
@@ -59,7 +59,7 @@
     <a href="https://twitter.com/"><i class="bi-twitter"></i></a>
     <a href="https://www.instagram.com/"><i class="bi-instagram"></i></a>
     <a href="https://www.linkedin.com/"><i class="bi-linkedin"></i></a>
-    <p>Designed by Stephen Kortum <a href="mailto:skortum@student.sussex.edu">Send Email</a></p>
+    <p>Designed by Stephen Kortum <a href="mailto:kortumstephen@yahoo.com">Send Email</a></p>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
       <img style="border:0;width:88px;height:31px"
           src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
