--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index.html"><img src="graphics/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
@@ -46,7 +46,7 @@
 
   <div class="row">
     <div class="gotw-col">
-      <a href="review.html"><img src="/gotw.png" alt="image"></a>
+      <a href="review.html"><img src="gotw.png" alt="image"></a>
       <h3>Game Of The Week</h3>
       <p>Call of Duty: Modern Warfare II</p>
       <i class="bi-star-fill"></i>
@@ -55,7 +55,7 @@
       <i class="bi-star-fill"></i>
     </div>
     <div class="gotw-col">
-      <a href="review.html"><img src="/gotm.png" alt="image"></a>
+      <a href="review.html"><img src="gotm.png" alt="image"></a>
       <h3>Game Of The Month</h3>
       <p>Stellaris</p>
       <i class="bi-star-fill"></i>
