--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index.html"><img src="logo.png" alt="logo"></a>
+      <a href="index.html"><img src="graphics/logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
@@ -46,7 +46,7 @@
 
   <div class="row">
     <div class="gotw-col">
-      <a href="review.html"><img src="gotw.png" alt="image"></a>
+      <a href="review.html"><img src="graphics/gotw.png" alt="image"></a>
       <h3>Game Of The Week</h3>
       <p>Call of Duty: Modern Warfare II</p>
       <i class="bi-star-fill"></i>
@@ -55,7 +55,7 @@
       <i class="bi-star-fill"></i>
     </div>
     <div class="gotw-col">
-      <a href="review.html"><img src="gotm.png" alt="image"></a>
+      <a href="review.html"><img src="graphics/gotm.png" alt="image"></a>
       <h3>Game Of The Month</h3>
       <p>Stellaris</p>
       <i class="bi-star-fill"></i>
@@ -64,7 +64,7 @@
       <i class="bi-star-fill"></i>
     </div>
     <div class="gotw-col">
-      <a href="review.html"><img src="goty.png" alt="image"></a>
+      <a href="review.html"><img src="graphics/goty.png" alt="image"></a>
       <h3>Game Of The Year</h3>
       <p>Elden Ring</p>
       <i class="bi-star-fill"></i>
@@ -85,19 +85,19 @@
 
   <div class="row">
     <div class="newupcomrel-col">
-      <img src="pc.png" alt="image">
+      <img src="graphics/pc.png" alt="image">
       <div class="layer">
         <a href="news&updates.html"><h3>PC</h3></a>
       </div>
     </div>
     <div class="newupcomrel-col">
-      <img src="xbox.png" alt="image">
+      <img src="graphics/xbox.png" alt="image">
       <div class="layer">
         <a href="news&updates.html"><h3>XBOX</h3></a>
       </div>
     </div>
     <div class="newupcomrel-col">
-      <img src="ps.png" alt="image">
+      <img src="graphics/ps.png" alt="image">
       <div class="layer">
          <a href="news&updates.html"><h3>PLAYSTATION</h3></a>
       </div>
@@ -140,14 +140,14 @@
 
   <div class="row">
     <div class="popthreads-col">
-      <a href="forum.html"></a><img src="popthread2.png" alt="image">
+      <a href="forum.html"></a><img src="graphics/popthread2.png" alt="image">
       <div>
       <p>Did you hear that I am the next top pro gamer!</p>
       <h3>Stephen Kortum</h3>
       </div>
     </div>
     <div class="popthreads-col">
-      <a href="forum.html"></a><img src="popthread2.png" alt="image">
+      <a href="forum.html"></a><img src="graphics/popthread2.png" alt="image">
       <div>
       <p>I think the next gen gaming is gonna be VR!</p>
       <h3>John Doe</h3>
