--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,7 @@
 <body>
     <section class="sub-header5">
          <nav>
-      <a href="index.html"><img src="/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="graphics//logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
