--- a/review.html
+++ b/review.html
@@ -16,7 +16,7 @@
 <body>
   <section class="sub-header2">
      <nav>
-      <a href="index.html"><img src="/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="graphics//logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
@@ -203,7 +203,7 @@
     <a href="https://twitter.com/"><i class="bi-twitter"></i></a>
     <a href="https://www.instagram.com/"><i class="bi-instagram"></i></a>
     <a href="https://www.linkedin.com/"><i class="bi-linkedin"></i></a>
-    <p>Designed by Stephen Kortum <a href="mailto:skortum@student.sussex.edu">Send Email</a></p>
+    <p>Designed by Stephen Kortum <a href="mailto:kortumstephen@yahoo.com">Send Email</a></p>
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
       <img style="border:0;width:88px;height:31px"
           src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
