--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gamers Unuited Login</title>
+  <title>Gamers United Login</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 <body>
     <section class="sub-header5">
          <nav>
-      <a href="index.html"><img src="/logo.png" alt="logo"></a>
+      <a href="index.html"><img src="graphics//logo.png" alt="logo"></a>
       <div class="nav-links" id="navLinks">
         <i class="bi-x-circle" onclick="hideMenu()"></i>
         <ul>
@@ -63,7 +63,7 @@
           <a href="https://twitter.com/"><i class="bi-twitter"></i></a>
           <a href="https://www.instagram.com/"><i class="bi-instagram"></i></a>
           <a href="https://www.linkedin.com/"><i class="bi-linkedin"></i></a>
-          <p>Designed by Stephen Kortum <a href="mailto:skortum@student.sussex.edu">Send Email</a></p>
+          <p>Designed by Stephen Kortum <a href="mailto:kortumstephen@yahoo.com">Send Email</a></p>
           <a href="http://jigsaw.w3.org/css-validator/check/referer">
             <img style="border:0;width:88px;height:31px"
                 src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
